--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
+    "file-loader": "^0.9.0",
     "rxjs": "^5.0.0-rc.2",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
