--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
     "start": "npm run webpack-server --progress"
   },
   "dependencies": {
+    "rxjs": "^5.0.0-rc.2"
+  },
+  "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
     "babel-preset-es2015": "^6.18.0",
+    "css-loader": "^0.26.0",
     "file-loader": "^0.9.0",
-    "rxjs": "^5.0.0-rc.2",
+    "node-sass": "^3.13.0",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
   }
