--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-preset-es2015": "^6.18.0",
     "css-loader": "^0.26.0",
     "file-loader": "^0.9.0",
+    "foundation-sites": "^6.2.4",
     "node-sass": "^3.13.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
