--- a/package.json
+++ b/package.json
@@ -6,37 +6,38 @@
   "author": "Albert Gonzalez (albert.glez.mld@gmail.com)",
   "license": "MIT",
   "scripts": {
-    "webpack": "./node_modules/.bin/webpack --optimize-minimize",
+    "webpack": "./node_modules/.bin/webpack --mode=production",
     "webpack-server": "./node_modules/.bin/webpack-dev-server",
     "start": "npm run webpack-server --progress",
     "test": "karma start --single-run"
   },
   "dependencies": {
-    "rxjs": "^5.0.0-rc.2"
+    "rxjs": "6.4.0"
   },
   "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.7",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-register": "^6.18.0",
-    "css-loader": "^0.26.0",
-    "file-loader": "^0.9.0",
-    "foundation-sites": "^6.2.4",
-    "jasmine": "^2.5.2",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-jasmine": "^1.0.2",
-    "karma-mocha-reporter": "^2.2.1",
-    "karma-webpack": "^1.8.0",
-    "node-sass": "^3.13.0",
-    "sass-loader": "^4.0.2",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2"
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/register": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
+    "foundation-sites": "^6.5.3",
+    "jasmine": "^3.3.1",
+    "karma": "^4.0.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^2.0.1",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-webpack": "^3.0.5",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1"
   },
   "babel": {
     "presets": [
-      "es2015"
+      "@babel/preset-env"
     ]
   }
 }
