--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "@babel/register": "^7.0.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
+    "eslint": "^5.15.1",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
     "file-loader": "^3.0.1",
     "foundation-sites": "^6.5.3",
     "jasmine": "^3.3.1",
